[tool.poetry]
name = "api_test_utils"
version = "0.0.0"
description = ""
authors = ["NHS Digital API Management"]
license = "Apache License 2.0"
packages = [
    { include = "api_test_utils" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"



[tool.poetry.dev-dependencies]
coverage = "^5.3"
pylint = "^2.6.0"
semver = "^2.9.0"
gitpython = "^3.0.5"

[tool.pytest.ini_options]
python_files = "*_tests.py test_*.py"
norecursedirs = ".venv .eggs build dist"
testpaths = [
    "tests"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry>=0.12", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
